# cubism-demo-rs

./: .editorconfig  .gitattributes  Cargo.toml  LICENSE  README.md  cspell.json  project-words.txt  rustfmt.toml
assets/: config.ron
assets/config/: components.ron  demo.ron
assets/images/: blue.xpm  magenta.xpm  orange.xpm  sprite.xpm
src/: auto_rotate_entity.rs  components.rs  config.rs  demo.rs  files.rs  grids.rs  level.rs  light_rings.rs  main.rs  main_camera.rs  pillars.rs  serialization.rs  shared.rs  systems.rs  ui.rs  wave_voxel.rs
src/demo/: auto_rotate_entity.rs  camera.rs  grids.rs  light_rings.rs  mod.rs  pillars.rs  shared.rs  wave_voxel.rs
src/lighting/: entity.rs  light.rs  light_node.rs  material.rs  mod.rs
src/lighting/custom_pipeline/: custom.frag  custom.vert  mod.rs
src/shaders/: emissive_material.frag  emissive_material.vert  light_ring_material.frag
