[package]
name = "cubism-demo-rs"
version = "0.1.0"
authors = ["Joshua Ols <joshua.d.ols@gmail.com>"]
edition = "2021"
rust-version = "1.64"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy = { git = 'https://github.com/bevyengine/bevy.git' }
bevy = "0.13.0"
rand = { version = "0.8.5", features = ["small_rng"] }
ron = "0.8.1"
serde = { version = "1.0.197", features = ["serde_derive"] }
